# besiktning

./: .gitignore  README.md
apps/api/: .env.example  pyproject.toml
apps/api/app/: admin.py  auth.py  config.py  db.py  db_models.py  main.py  members.py  models.py  news.py  schemas.py  storage.py
apps/api/scripts/: news_feeds.json  scrape_news.py  seed_demo.py
apps/api/tests/: test_overlatelse_template.py  test_smoke.py
apps/web/: DEPLOY.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/app/admin/: actions.ts  layout.tsx  page.tsx
apps/web/app/admin/medlemmar/: page.tsx
apps/web/app/components/: Avatar.tsx  SiteShell.tsx
apps/web/app/engine/: CaseChat.tsx  CasePreview.tsx  CaseWorkspace.tsx  PhotoLoop.tsx  page.tsx  useCase.ts
apps/web/app/guide/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/medlemmar/: ApplyForm.tsx  page.tsx
apps/web/app/nyheter/: page.tsx
apps/web/app/om/: page.tsx
apps/web/components/: SchemaField.tsx  SchemaForm.tsx
apps/web/lib/: api.ts  gemini.ts  imagePrep.ts  noteringar.ts  session.ts  useAutosave.ts
apps/web/lib/case/: agent.golden.test.ts  agent.test.ts  agent.ts  edits.test.ts  edits.ts  exportDocx.test.ts  exportDocx.ts  sectionForCategory.test.ts  sectionForCategory.ts  template.test.ts  template.ts  types.ts
apps/web/public/medlemmar/: README.md
apps/web/scripts/: sync-catalog.mjs
docs/: neon-setup.md
docs/superpowers/plans/: 2026-06-04-case-chat.md
docs/superpowers/specs/: 2026-06-04-case-chat-design.md
(+10 files in other folders)
